# agentic-ai-in-production-book

./: .gitignore  README.md
collabs/: README.md
collabs/Chapter4/: Chapter04_SupportMaxPro_Memory_Demo.ipynb  README_Chapter04_Demo.md
collabs/Chapter5/: README_Chapter5_Notebook.md  chapter5_context_engineering_demo.ipynb
supportmax-pro/: README.md
supportmax-pro/docs/: SUPPORTMAX_VERSION_COMPARISON.md  implementation_details.md  implementation_plan.md  latest_implmentation_plan.md  supportmax_pro_implementation_plan.md
supportmax-pro/v0.5-baseline/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
supportmax-pro/v0.5-baseline/data/: tickets.json
supportmax-pro/v0.5-baseline/deployment/: Dockerfile  docker-compose.yml
supportmax-pro/v0.5-baseline/docs/: api_documentation.md  constraint_validation.md  interaction_diagram.md
supportmax-pro/v0.5-baseline/src/: main.py
supportmax-pro/v0.5-baseline/src/agent/: __init__.py  action.py  baseline_agent.py  crew_agent.py  perception.py  reasoning.py
supportmax-pro/v0.5-baseline/src/api/: __init__.py  endpoints.py
supportmax-pro/v0.5-baseline/src/config/: constraints.py  settings.py
supportmax-pro/v0.5-baseline/src/frontend/: streamlit_app.py
supportmax-pro/v0.5-baseline/src/knowledge/: __init__.py  faq_store.py  sample_faqs.json
supportmax-pro/v0.5-baseline/src/tests/: test_agent.py  test_tools.py
supportmax-pro/v0.5-baseline/src/tools/: __init__.py  crew_tools.py  ticket_creator.py
supportmax-pro/v0.5-baseline/tests/: test_agent.py  test_tools.py
supportmax-pro/v1-mvp/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.fixed.yml  docker-compose.yml  pyproject.toml
supportmax-pro/v1-mvp/data/docs/: support_docs.md
supportmax-pro/v1-mvp/docs/: interaction_diagram.md
supportmax-pro/v1-mvp/src/: main.py
supportmax-pro/v1-mvp/src/agent/: agents.py  crew.py  tasks.py
supportmax-pro/v1-mvp/src/api/: endpoints.py  middleware.py
supportmax-pro/v1-mvp/src/config/: constraints.py  settings.py
supportmax-pro/v1-mvp/src/frontend/: streamlit_app.py
supportmax-pro/v1-mvp/src/knowledge/: document_loader.py
supportmax-pro/v1-mvp/src/tools/: ticket_creator.py
supportmax-pro/v2-cognitive/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
supportmax-pro/v2-cognitive/src/agent/: agents.py  crew.py  tasks.py
supportmax-pro/v2-cognitive/src/api/: endpoints.py
supportmax-pro/v2-cognitive/src/config/: settings.py
supportmax-pro/v2-cognitive/src/frontend/: streamlit_app.py
supportmax-pro/v2-cognitive/src/knowledge/: vector_store.py
supportmax-pro/v2-cognitive/src/memory/: memory_store.py
supportmax-pro/v2-cognitive/src/tools/: rag_tool.py
supportmax-pro/v3-enterprise/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
