[project]
name = "supportmax-pro-v0.5-baseline"
version = "0.5.0"
description = "Baseline Agent Implementation"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings==2.1.0",
    "openai>=1.13.3",
    "anthropic==0.18.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pytest==8.0.0",
    "httpx==0.26.0",
    "streamlit==1.31.0",
    "crewai==0.19.0",
    "langchain-openai==0.0.5",
    "setuptools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
