[project]
name = "supportmax-pro-v3-enterprise"
version = "3.0.0"
description = "Enterprise Integration Implementation"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "redis[cluster]==5.0.1",
    "neo4j==5.14.1",
    "langgraph==0.0.20",
    "crewai==0.1.20",
    "mem0ai==0.0.10",
    "langchain==0.1.0",
    "openai==1.3.5",
    "anthropic==0.7.4",
    "azure-ai-inference==1.0.0",
    "google-cloud-aiplatform==1.38.0",
    "botframework-connector==4.15.0",
    "microsoft-bot-framework==4.15.0",
    "model-context-protocol==0.1.0",
    "msal==1.26.0",
    "okta-sdk-python==2.9.5",
    "auth0-python==4.5.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==41.0.7",
    "kong-python-client==0.2.0",
    "istio-client==0.4.0",
    "python-saml==1.15.0",
    "oauthlib==3.2.2",
    "pyjwt==2.8.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    "kubernetes==28.1.0",
    "prometheus-client==0.19.0",
    "datadog==0.48.0",
    "httpx==0.25.1",
    "tenacity==8.2.3",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
